Bug 93410 - [BDW,SKL][GLES 3.1 CTS]ES31-CTS.shader_image_load_store.negative-linkErrors fail
Summary: [BDW,SKL][GLES 3.1 CTS]ES31-CTS.shader_image_load_store.negative-linkErrors fail
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: 11.0
Hardware: Other All
: medium normal
Assignee: Marta Löfstedt
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: 92778
  Show dependency treegraph
 
Reported: 2015-12-16 14:47 UTC by Marta Löfstedt
Modified: 2016-01-13 10:48 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Marta Löfstedt 2015-12-16 14:47:01 UTC
Software versions:
    4.4.0-040400rc4-generic
    OpenGL version string: 3.0 Mesa 11.2.0-devel (git-8e195a6)

GPU hardware:
    OpenGL renderer string: Mesa DRI Intel(R) HD Graphics 530 (Skylake GT2) 
    00:02.0 VGA compatible controller [0300]: Intel Corporation Sky Lake Integrated Graphics [8086:1912] (rev 06)

CPU hardware:
    x86_64
    Intel(R) Core(TM) i5-6600K CPU @ 3.50GHz
-----------------
Software versions:
    4.3.0-rc3+
    OpenGL version string: 3.0 Mesa 11.2.0-devel (git-8e195a6)

GPU hardware:
    OpenGL renderer string: Mesa DRI Intel(R) HD Graphics 5300 (Broadwell GT2) 
    00:02.0 VGA compatible controller [0300]: Intel Corporation Broadwell-U Integrated Graphics [8086:161e] (rev 06)

CPU hardware:
    x86_64
    Genuine Intel(R) CPU 0000 @ 0.60GHz
------------------
CTS version Intel internal:
git@67ae88f31295

command: 
./glcts --deqp-case=ES31-CTS.shader_image_load_store.negative-linkErrors

Environment:
Ubuntu 15.10
Mesa built with: --enable-debug
export MESA_GLES_VERSION_OVERRIDE=3.1
export MESA_EXTENSION_OVERRIDE=GL_ARB_compute_shader
-------------------
This test pass on HSW
Comment 1 Marta Löfstedt 2016-01-05 10:05:33 UTC
The shaders in the test should fail to link, but they don't. It seem that we don't check types over shader stages. 

The test have:
in vs: "layout(rgba32f) writeonly uniform highp image3D g_image;"
in fs: "layout(rgba32f) writeonly uniform highp image2D g_image;"

and in a second case:
in vs: layout(rgba32f)
in fs: layout(r32f)
Comment 2 Marta Löfstedt 2016-01-05 13:53:37 UTC
The issue is not reproducible with Samuels patch:

http://patchwork.freedesktop.org/patch/69470/
Comment 3 Marta Löfstedt 2016-01-13 10:48:56 UTC
The issue is solved by:

commit 69c4c752642d58e294f28db650afc4a9e8b0b38a
Author: Samuel Iglesias Gonsálvez <siglesias@igalia.com>
Date:   Tue Jan 5 13:21:17 2016 +0100

    glsl: add image_format check in cross_validate_globals()


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.